(tweaks) fix for wrong placement on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -1517,7 +1517,7 @@ body.pk_stndln{padding-bottom:600px;overflow:hidden}
 	.pk_mob .pk_hdr{padding:20px 5px 0}
 	.pk_mob .pk_transport,
 	.pk_mob .pk_ctns,
-	.pk_mob .pk_btngroup{float:none;display:inline-block}
+	.pk_mob .pk_btngroup{float:none;display:inline-block;vertical-align:baseline}
 	.pk_mob .pk_mtbeat{float:none}
 	.pk_mob.pk_mt_on .pk_mtbeat{display:inline-grid}
 	.pk_mob .pk_selection{display:inline-flex!important}
